# platform-clients

./: .gitignore  README.md  daily.md  main.py  migrations.sh  prepare.template.sh  pyproject.toml  template.env  upgrade_dbs.py
data/_RUN_CONFIG/: example.yaml  phase2.yaml  phase2_twitter.yaml  phase2_youtube.yaml
data/examples/: video_list_response.json
data/examples/tasks/: youtube1.json  youtube2.json
data/labelstudio_configs/: test_session_1_2025.xml
data/misc/: youtube-group-test.json  youtube-test.json
data/processed_tasks/: test.json  test_twitter_group.json  test_youtube-en_2024_one_as_much_as_possible.json  twitter_recent_tweets_2023_en_config.json  youtube-en_2022_march_group.json  youtube-en_2024_one_as_much_as_possible.json  youtube-europe_en_feb.json  youtube-task_group.json
data/schema/: client_config.schema.json
data/tasks/: test.json  youtube-en_2024_jan_exploit_m.json  youtube-europe_en_feb.json
scripts/: collect_twitter_loop.sh  uninstall_big5_libs.sh
src/: const.py  main.py  platform_manager.py  platform_orchestration.py  run_collect.py  server.py  status.py  system_notify.py  task_manager.py
src/clients/: abstract_client.py  client_task.py  clients_main.py  clients_models.py  config_file_creation_helper.py  task_groups.py  task_parser.py
src/clients/instances/: instagram_client.py  tiktok_client.py  twitter_client.py  (+1 more)
src/db/: db_funcs.py  db_mgmt.py  db_models.py  db_session.py  db_settings.py  model_conversion.py  platform_db_mgmt.py
src/experiment/: bool_db.py  crawler_config_exp.py  dump_titles.ipynb  get_yt_ids.ipynb  read_twitter_db.py  selenium_insta.py  selenium_tools.py  twitter.py  twitter_2023_q1_labels_check.ipynb  twitter_video_stats.ipynb  youtube_video_stats.ipynb
src/misc/: add_empty_metadata_content.py  create_schemas.py  data_paths.py  db_stats.py  files.py  helper.py  import meta_data.py  platform_quotas.py  twitter_selenium_login.py
src/platform_mgmt/: tiktok_manager.py  twitter_manager.py  youtube_manager.py
src/scripts/: ONCE_move_yt_entries_from_twitter_db.py  construct_schemas.py  create_collection_tasks_for_missing_hours.py  duplicate_db.py  find_db_duplicates.py  load_browser_twitter_cookies.py  plot_counts.py  task_config_transformation.py
test/: test_db_mgmt.py
test/clients/: test_youtube_client.py
(+3 files in other folders)
