[project]
name = "platform-clients"
version = "0.9.0"
description = "Platform clients package for social media data collection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "big5-databases",
    "httpx>=0.28.1",
    "typer>=0.15.2",
]

[project.optional-dependencies]
youtube = [
    "google-api-python-client>=2.166.0",
    "more-itertools>=10.6.0",
    "pyrfc3339>=2.0.1",
]

twitter = [
    "twscrape>=0.17.0",
]

[tool.uv.sources]
big5-databases = { git = "https://github.com/ERC-BIG-5/databases" }
